AmicarDP/src/objects/Local__c.object
<CustomObject>
    <fields>
        <fullName>Codigo_Local__c</fullName>
        <externalId>true</externalId>
        <label>Código Local</label>
        <length>5</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Concesionario__c</fullName>
        <label>Concesionario</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Concesionario</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Importador__c</fullName>
        <label>Importador</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Importadores</valueSetName>
        </valueSet>
    </fields>
    <label>Local</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Codigo_Local__c</columns>
        <columns>Concesionario__c</columns>
        <columns>Importador__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <label>Nombre de Local</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locales</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>